--- a/lista1/rpc/meson.build
+++ b/lista1/rpc/meson.build
@@ -1,5 +1,5 @@
 rpc_inc = include_directories('inc')
-rpc_src = files('src/udp.cpp')
+rpc_src = files('src/udp.cpp', 'src/marshalling.cpp')
 
 asio_dep = dependency('asio', required: true)
 rpc_dep = static_library(
@@ -13,3 +13,8 @@ rpc_dep = declare_dependency(
     link_with: rpc_dep,
     dependencies: [asio_dep.partial_dependency(includes: true)],
 )
+
+gtest_dep = dependency('gtest', main:true, required:true)
+rpc_test = files('test/marshalling.cpp')
+tests = executable('marshalling', rpc_test, dependencies:[rpc_dep, gtest_dep])
+test('RPC marshalling tests', tests)
