--- a/lista1/meson.build
+++ b/lista1/meson.build
@@ -6,6 +6,7 @@ project(
 )
 
 subdir('rpc')
+subdir('filesystem')
 client = executable('client', 'client.cpp', dependencies: [rpc_dep])
 server = executable('server', 'server.cpp', dependencies: [rpc_dep])
 
