--- a/lista1/rpc/meson.build
+++ b/lista1/rpc/meson.build
@@ -1,5 +1,5 @@
 rpc_inc = include_directories('inc')
-rpc_src = files('src/udp.cpp', 'src/marshalling.cpp')
+rpc_src = files('src/marshalling.cpp', 'src/server.cpp', 'src/udp.cpp')
 
 asio_dep = dependency('asio', required: true)
 rpc_dep = static_library(
@@ -14,7 +14,7 @@ rpc_dep = declare_dependency(
     dependencies: [asio_dep.partial_dependency(includes: true)],
 )
 
-gtest_dep = dependency('gtest', main:true, required:true)
+gtest_dep = dependency('gtest', main: true, required: true)
 rpc_test = files('test/marshalling.cpp')
-tests = executable('marshalling', rpc_test, dependencies:[rpc_dep, gtest_dep])
+tests = executable('marshalling', rpc_test, dependencies: [rpc_dep, gtest_dep])
 test('RPC marshalling tests', tests)
