--- a/lista1/meson.build
+++ b/lista1/meson.build
@@ -7,6 +7,7 @@ project(
 
 subdir('rpc')
 subdir('filesystem')
+subdir('demo')
 client = executable('client', 'client.cpp', dependencies: [rpc_dep])
 server = executable('server', 'server.cpp', dependencies: [rpc_dep])
 
